--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Just a small town boy, living in a lonely world.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Bringing up usless facts at inopportune times, reading, Gardening the life out of plants.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Host Reading Rainbow</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Easton, PA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Money Power and Respect</p>
     </section>
 
     <footer id="footer">
